Add controllers, services, and repositories for Gatunek, Magazyn, Stoisko, and Wielkosc entities